Decouple serialization format from UDTs